// Copyright 2023 Scott M. Long
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
// 	http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

// Basic protobuf
syntax = "proto3";

package grpc_test.v1;

option go_package = "github.com/neuralnorthwest/mu/grpc/test/proto/gen/go/grpc_test/v1";

// GRPCTestService is a test service
service GRPCTestService {
  // GRPCTest is a test method
  rpc GRPCTest(GRPCTestRequest) returns (GRPCTestResponse) {}
}

// TestRequest is a test request
message GRPCTestRequest {
  // Name is a test name
  string name = 1;
}

// TestResponse is a test response
message GRPCTestResponse {
  // Message is a test message
  string message = 1;
}
